fix: remove bg video on mobile for now (<500px)

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -199,7 +199,7 @@ a.secondary {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .bgvideo {
     display: none;
   }
